Rob-I485: Variable List for Notification Template Editor - done

--- a/package.json
+++ b/package.json
@@ -53,15 +53,16 @@
         "@angular/elements": "^10.1.6",
         "@angular/platform-browser": "^10.1.6",
         "@angular/platform-browser-dynamic": "^10.1.6",
-        "@paperbits/common": "0.1.376",
-        "@paperbits/core": "0.1.376",
-        "@paperbits/emails": "0.1.376",
-        "@paperbits/firebase": "0.1.376",
-        "@paperbits/forms": "0.1.376",
-        "@paperbits/gtm": "0.1.376",
-        "@paperbits/intercom": "0.1.376",
-        "@paperbits/prosemirror": "0.1.376",
-        "@paperbits/styles": "0.1.376",
+        "@paperbits/common": "^0.1.407",
+        "@paperbits/core": "^0.1.407",
+        "@paperbits/emails": "^0.1.407",
+        "@paperbits/firebase": "^0.1.407",
+        "@paperbits/forms": "^0.1.407",
+        "@paperbits/gtm": "^0.1.407",
+        "@paperbits/intercom": "^0.1.407",
+        "@paperbits/prosemirror": "^0.1.407",
+        "@paperbits/styles": "^0.1.407",
+        "@types/google-maps": "^3.2.2",
         "@webcomponents/custom-elements": "^1.4.2",
         "core-js": "^3.6.5",
         "html2canvas": "^1.0.0-rc.7",
